[package]
name = "domain_info"
version = "0.1.0"
authors = ["Garrett Hunyadi <garrett.hunyadi@endurance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.99", features = ["derive"] } 
serde_json = "1.0"
serde_derive = "1.0"
unicode-segmentation = "0.1.2"
chrono = { version = "0.4", features = ["serde"] }
dns-lookup = "1.0.1"
reqwest = "0.9.20"
select = "0.4.3"
whatlang = "0.3.0"
scraper = "0.10.1"