[package]
name = "domain_info"
version = "0.1.1"
authors = ["Garrett Hunyadi <garrett@pobox.com>"]
edition = "2018"
description = "Fetch information about a domain, including front page stats and technologies used."
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0.99", features = ["derive"] } 
serde_json = "1.0"
serde_yaml = "0.8"
serde_derive = "1.0"
unicode-segmentation = "0.1.2"
chrono = { version = "0.4", features = ["serde"] }
dns-lookup = "1.0.1"
reqwest = { version = "0.10", features = ["cookies","json","blocking"] }
select = "0.4.3"
whatlang = "0.3.0"
scraper = "0.10.1"
lazy_static = "1.4.0"
regex = "1"
void = "1"
trust-dns = "0.17.0"
tokio = { version = "0.2", features = ["full"] }
futures = { version = "0.3", features = ["compat"] }